--- a/HotelSimulatie/HotelSimulatie/Sprites.resx
+++ b/HotelSimulatie/HotelSimulatie/Sprites.resx
@@ -142,6 +142,9 @@
   <data name="Room" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Room.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Staircase" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Staircase.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="star" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\star.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
