--- a/HotelSimulatie/HotelSimulatie/Sprites.resx
+++ b/HotelSimulatie/HotelSimulatie/Sprites.resx
@@ -140,7 +140,7 @@
     <value>Resources\Room.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="RoomDoor" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\Door.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>Resources\RoomDoor.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Staircase" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Staircase.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
