--- a/HotelSimulatie/HotelSimulatie/Sprites.resx
+++ b/HotelSimulatie/HotelSimulatie/Sprites.resx
@@ -133,6 +133,9 @@
   <data name="Reception" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Reception.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ReceptionBar" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\ReceptionBar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Restaurant" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Restaurant.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
