--- a/HotelSimulatie/HotelSimulatie/Sprites.resx
+++ b/HotelSimulatie/HotelSimulatie/Sprites.resx
@@ -121,6 +121,9 @@
   <data name="Cinema" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Cinema.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Cinema_Start" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Cinema_Start.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Customer" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\MarvAndHarry.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
